--- a/cadastro_usuario.html
+++ b/cadastro_usuario.html
@@ -19,7 +19,7 @@
         </div>
         <div>
             <label for="fone">Telefone</label>
-            <input type="text" name="fone" id="fone">
+            <input type="text" name="fone" id="fone" pattern="\([0-9]{2}\)[0-9]{4-5}-[0-9]{4}" placeholder="Formato (18)99999-8888">
         </div>
         <div>
             <label for="senha">Senha</label>
