--- a/cadastro_usuario.html
+++ b/cadastro_usuario.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>CADASTRO DE USUÁRIOS - IFSP </h1>
-    <form action="conexao.php" method="post">
+    <form action="cadastro_usuario.php" method="post">
         <div>
             <label for="nome">Nome</label>
             <input type="text" name="nome" id="nome">
@@ -19,7 +19,7 @@
         </div>
         <div>
             <label for="fone">Telefone</label>
-            <input type="text" name="fone" id="fone" pattern="\([0-9]{2}\)[0-9]{4-5}-[0-9]{4}" placeholder="Formato (18)99999-8888">
+            <input type="text" name="fone" id="fone" pattern="\([0-9]{2}\)([9]{1})?[0-9]{4-5}-[0-9]{4}" placeholder="Formato (18)99999-8888">
         </div>
         <div>
             <label for="senha">Senha</label>
