--- a/cadastro_usuario.html
+++ b/cadastro_usuario.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>CADASTRO DE USUÁRIOS - IFSP </h1>
-    <form action="cadastro_usuario.php" method="post">
+    <form action="cadastro_usuario.php" 
+          method="post" enctype="multipart/form-data">
         <div>
             <label for="nome">Nome</label>
             <input type="text" name="nome" id="nome">
@@ -20,6 +21,9 @@
         <div>
             <label for="fone">Telefone</label>
             <input type="text" name="fone" id="fone" pattern="\([0-9]{2}\)([9]{1})?[0-9]{4-5}-[0-9]{4}" placeholder="Formato (18)99999-8888">
+        </div>
+        <div>
+            <input type="file" name="foto" id="foto" accept="image/png, image/jpeg">
         </div>
         <div>
             <label for="senha">Senha</label>
